# b2-hm8

./: README.md  pyproject.toml
task_1/: saving_to_the_db.py
task_2/: consumer.py  models.py  producer.py
