[tool.poetry]
name = "b2-hm8"
version = "0.1.0"
description = ""
authors = ["Vadim-3 <128088822+Vadim-3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^5.0.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
celery = "^5.3.4"
faker = "^19.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
